--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/house-martell/Similar-Listings-Proxy#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "morgan": "^1.9.1"
   }
